--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,35 @@
+@import "./../src/fonts.scss";
 
 .container{
     margin: 0 370px;
+}
+
+header{
+    height: 100vh ;
+    background: linear-gradient( #ecf2f8, white)
+}
+
+.header-nav {
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-logo {
+    width: 110px;
+}
+
+.nav-item:hover{
+    color: #A1C4FD;
+    text-decoration: underline;
+}
+
+
+
+.footer {
+    background-color: #F2F6FA;
+    height: 115px;
+    position: absolute;
+    bottom: 0;
 }
